--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "@down-the-whole/tersa",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Christian Battaglia <christian.d.battaglia@gmail.com>",
-  "license": "MIT",
-   "bin": {
-       "tersa": "bin/tersa.js"
-   },
-  "scripts": {},
-  "peerDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/node": "^7.10.5",
-    "@babel/parser": "^7.11.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-arrow-functions": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/yargs": "^15.0.5",
-    "fs-extra": "^9.0.1",
-    "recursive-readdir": "^2.2.2",
-    "yargs": "^15.4.1"
-  }
+    "name": "@down-the-whole/tersa",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Christian Battaglia <christian.d.battaglia@gmail.com>",
+    "license": "MIT",
+    "bin": {
+        "tersa": "bin/tersa.js"
+    },
+    "scripts": {
+        "build": "webpack"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.10.5",
+        "@babel/core": "^7.10.5",
+        "@babel/node": "^7.10.5",
+        "@babel/parser": "^7.11.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-arrow-functions": "^7.10.4",
+        "@babel/plugin-transform-runtime": "^7.10.5",
+        "@babel/preset-env": "^7.10.4",
+        "@babel/preset-typescript": "^7.10.4",
+        "@types/yargs": "^15.0.5",
+        "fs-extra": "^9.0.1",
+        "recursive-readdir": "^2.2.2",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-node-externals": "^2.5.0",
+        "yargs": "^15.4.1"
+    }
 }
