--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
         "@types/yargs": "^15.0.5",
+        "babel-loader": "^8.1.0",
+        "file-loader": "^6.0.0",
         "fs-extra": "^9.0.1",
         "recursive-readdir": "^2.2.2",
         "webpack": "^4.44.1",
