--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     },
     "scripts": {
         "build": "webpack",
-        "build:playground": "node build/bundle.js --cmd build --srcDir playground/src/node --destDir playground/dist/node",
-        "start": "npm run build && npm run build:playground && concurrently \"npm run start:playground:node\" \"npm run watch\"",
-        "start:playground:node": "node playground/dist/node/index.js",
-        "watch": "node build/bundle.js --cmd watch --srcDir playground/src/node --destDir playground/dist/node"
+        "build:playground:node": "node build/bundle.js build --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js",
+        "start": "yarn run build && yarn run watch:playground:node",
+        "watch:playground:node": "node build/bundle.js watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.5",
@@ -25,6 +24,8 @@
         "@babel/plugin-transform-typescript": "^7.11.0",
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
+        "@types/express": "^4.17.7",
+        "@types/portscanner": "^2.1.0",
         "@types/yargs": "^15.0.5",
         "babel-loader": "^8.1.0",
         "chokidar": "^3.4.1",
@@ -38,6 +39,7 @@
         "yargs": "^15.4.1"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "portscanner": "^2.2.0"
     }
 }
