--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start": "yarn run build && yarn run watch:playground:node",
         "watch:playground:node": "node build/bundle.js watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
     },
-    "devDependencies": {
+    "dependencies": {
         "@babel/cli": "^7.10.5",
         "@babel/core": "^7.10.5",
         "@babel/node": "^7.10.5",
@@ -24,6 +24,7 @@
         "@babel/plugin-transform-typescript": "^7.11.0",
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
+        "@babel/runtime": "^7.11.0",
         "@types/express": "^4.17.7",
         "@types/portscanner": "^2.1.0",
         "@types/yargs": "^15.0.5",
@@ -32,6 +33,7 @@
         "concurrently": "^5.2.0",
         "file-loader": "^6.0.0",
         "fs-extra": "^9.0.1",
+        "node-loader": "^1.0.1",
         "recursive-readdir": "^2.2.2",
         "resolve": "^1.17.0",
         "webpack": "^4.44.1",
@@ -39,7 +41,7 @@
         "webpack-node-externals": "^2.5.0",
         "yargs": "^15.4.1"
     },
-    "dependencies": {
+    "devDependencies": {
         "express": "^4.17.1",
         "portscanner": "^2.2.0"
     }
