--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
         "tersa": "bin/tersa.js"
     },
     "scripts": {
-        "build": "webpack",
-        "build:playground:node": "node build/bundle.js build --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js",
+        "build:cli:webpack": "webpack",
+        "build:cli:tsc": "tsc -w --incremental --p src-vite/node",
+        "build:playground:node": "node build/webpack-babel.js build --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js",
         "start": "yarn run build && yarn run watch:playground:node",
-        "watch:playground:node": "node build/bundle.js watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
+        "watch:playground:node": "node build/webpack-babel.js watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
     },
     "dependencies": {
         "@babel/cli": "^7.10.5",
@@ -25,25 +26,56 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
         "@babel/runtime": "^7.11.0",
+        "@types/es-module-lexer": "^0.3.0",
         "@types/express": "^4.17.7",
+        "@types/fs-extra": "^9.0.1",
+        "@types/hash-sum": "^1.0.0",
+        "@types/koa": "^2.11.3",
+        "@types/lru-cache": "^5.1.0",
+        "@types/mime-types": "^2.1.0",
         "@types/portscanner": "^2.1.0",
+        "@types/postcss-load-config": "^2.0.1",
+        "@types/resolve": "^1.17.1",
+        "@types/slash": "^3.0.0",
+        "@types/ws": "^7.2.6",
         "@types/yargs": "^15.0.5",
+        "@vue/compiler-sfc": "^3.0.0-rc.5",
         "babel-loader": "^8.1.0",
+        "chalk": "^4.1.0",
         "chokidar": "^3.4.1",
         "concurrently": "^5.2.0",
+        "core-js-compat": "^3.6.5",
+        "corejs": "^1.0.0",
+        "dotenv": "^8.2.0",
+        "dotenv-expand": "^5.1.0",
+        "es-module-lexer": "^0.3.24",
+        "esbuild": "^0.6.17",
+        "execa": "^4.0.3",
         "file-loader": "^6.0.0",
         "fs-extra": "^9.0.1",
+        "koa": "^2.13.0",
+        "koa-proxies": "^0.11.0",
         "node-loader": "^1.0.1",
+        "open": "^7.1.0",
+        "ora": "^4.1.0",
+        "postcss-load-config": "^2.1.0",
+        "querystring": "^0.2.0",
         "recursive-readdir": "^2.2.2",
         "resolve": "^1.17.0",
+        "rollup": "^2.23.0",
+        "rollup-plugin-vue": "^6.0.0-beta.10",
+        "rollup-pluginutils": "^2.8.2",
+        "typescript": "^3.9.7",
+        "vue": "^3.0.0-rc.5",
         "webpack": "^4.44.1",
+        "webpack-bundle-analyzer": "^3.8.0",
         "webpack-cli": "^3.3.12",
         "webpack-node-externals": "^2.5.0",
+        "ws": "^7.3.1",
         "yargs": "^15.4.1"
     },
     "devDependencies": {
         "express": "^4.17.1",
-        "portscanner": "^2.2.0",
-        "webpack-bundle-analyzer": "^3.8.0"
+        "portscanner": "^2.2.0"
     }
 }
