--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "tersa": "bin/tersa.js"
     },
     "scripts": {
-        "build": "webpack",
-        "build:playground:node": "node build/bundle.js build --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js",
-        "start": "yarn run build && yarn run watch:playground:node",
-        "watch:playground:node": "node build/bundle.js watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
+        "build:cli:tsc": "tsc --incremental --p src/node",
+        "build:playground:node": "tersa build --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js",
+        "start": "yarn run build:cli:tsc && yarn run watch:playground:node",
+        "watch:playground:node": "tersa watch --srcDir playground/src/node --destDir playground/dist/node --entrypoint playground/dist/node/index.js"
     },
     "dependencies": {
         "@babel/cli": "^7.10.5",
@@ -26,24 +26,26 @@
         "@babel/preset-typescript": "^7.10.4",
         "@babel/runtime": "^7.11.0",
         "@types/express": "^4.17.7",
-        "@types/portscanner": "^2.1.0",
         "@types/yargs": "^15.0.5",
         "babel-loader": "^8.1.0",
         "chokidar": "^3.4.1",
         "concurrently": "^5.2.0",
+        "core-js": "^3.6.5",
+        "core-js-compat": "^3.6.5",
+        "express": "^4.17.1",
         "file-loader": "^6.0.0",
         "fs-extra": "^9.0.1",
         "node-loader": "^1.0.1",
+        "portscanner": "^2.2.0",
         "recursive-readdir": "^2.2.2",
         "resolve": "^1.17.0",
+        "typescript": "^3.9.7",
+        "vite": "^1.0.0-rc.4",
         "webpack": "^4.44.1",
+        "webpack-bundle-analyzer": "^3.8.0",
         "webpack-cli": "^3.3.12",
         "webpack-node-externals": "^2.5.0",
         "yargs": "^15.4.1"
     },
-    "devDependencies": {
-        "express": "^4.17.1",
-        "portscanner": "^2.2.0",
-        "webpack-bundle-analyzer": "^3.8.0"
-    }
+    "devDependencies": {}
 }
