--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
         "@babel/runtime": "^7.11.0",
+        "@koa/router": "^9.4.0",
         "@prefresh/vite": "^1.0.1",
         "@types/express": "^4.17.7",
+        "@types/node": "^14.6.2",
         "@types/yargs": "^15.0.5",
         "babel-loader": "^8.1.0",
         "chokidar": "^3.4.1",
@@ -49,6 +51,7 @@
         "yargs": "^15.4.1"
     },
     "dependencies": {
+        "axios": "^0.20.0",
         "preact": "^10.4.8"
     }
 }
